<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">猜牌積分遊戲guessRankGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="but1">開始洗牌</string>
    <string name="strtextView">積分:</string>
    <string name="zero">0</string>
    <string name="space"></string>
    <string name="strbutexit">離開遊戲</string>
    <string name="str100">100</string>
    <string name="strtv2">請選擇遊戲回合數</string>
    <string name="strbut2">開始遊戲</string>
    <string name="strBut3">再來一局</string>
    <string name="textview2">排行榜</string>
    <string name="tvreadme">　　你要猜中黑桃A在哪一張牌才能得分喔!</string>
    <string name="butregard">不知道在哪 -10分</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
