<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strtextView"
                    android:textSize="@dimen/dp30" />

                <TextView
                    android:id="@id/tvrank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str100"
                    android:textSize="@dimen/dp30" />


                <TextView
                    android:id="@id/tvcondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/zero"
                    android:textColor="@color/red"
                    android:textSize="@dimen/d50" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/club2127666_1282707469" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/diamond2127666_1282707469" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/spade2127666_1282707469" />

            </LinearLayout>



                <LinearLayout
                    android:id="@+id/buttonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                   >

                    <Button
                        android:id="@id/but1"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/butH"
                        android:text="@string/but1"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@id/butregard"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/butH"
                        android:enabled="false"
                        android:text="@string/butregard"
                        android:textColor="@android:color/black" />

                    <com.google.android.gms.ads.NativeExpressAdView
                        android:id="@+id/adView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        ads:adSize="600x200"
                        ads:adUnitId="ca-app-pub-4642124283463221/5620880353"></com.google.android.gms.ads.NativeExpressAdView>


                </LinearLayout>
            </LinearLayout>


    </RelativeLayout>
</ScrollView>
